crates/rome_js_formatter/tests/specs/prettier/js/do/do.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\do\\do.js"
---

# Input

```js
const envSpecific = {
  domain:
    do {
      if(env === 'production') 'https://abc.mno.com/';
      else if(env === 'development') 'http://localhost:4000';
    }
};

let x = do {
  let tmp = f();
  tmp * tmp + 1
};

let y = do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

function foo() {
  return (
    <nav>
      <Home />
      {
        do {
          if (loggedIn) {
            <LogoutButton />
          } else {
            <LoginButton />
          }
        }
      }
    </nav>
  );
}

(do {});
(do {} + 1);
(1 + do {});
() => do {};

(do {
  switch(0) {
    case 0: "foo";
    case 1: break;
  }
});

() => do {
  var obj = { foo: "bar", bar: "foo" };
  for (var key in obj) {
    obj[key];
  }
};
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,55 +1,61 @@
 const envSpecific = {
-  domain: do {
-    if (env === "production") "https://abc.mno.com/";
-    else if (env === "development") "http://localhost:4000";
-  },
-};
+  domain:
+    do {
+      if(env === 'production') 'https://abc.mno.com/';
+else
+if (env === "development") "http://localhost:4000";
+}
+}
 
-let x = do {
+let x =
+do {
   let tmp = f();
-  tmp * tmp + 1;
+  tmp * tmp + 1
 };
 
-let y = do {
-  if (foo()) {
-    f();
-  } else if (bar()) {
-    g();
-  } else {
-    h();
-  }
+let y =
+do {
+  if (foo()) { f() }
+  else if (bar()) { g() }
+  else { h() }
 };
 
 function foo() {
   return (
     <nav>
       <Home />
-      {do {
-        if (loggedIn) {
-          <LogoutButton />;
-        } else {
-          <LoginButton />;
+      {
+        do {
+          if (loggedIn) {
+            <LogoutButton />
+          } else {
+            <LoginButton />
+          }
         }
-      }}
+      }
     </nav>
   );
 }
 
-(do {});
-(do {} + 1);
-1 + do {};
-() => do {};
+(
+do {});
+(
+do {} + 1);
+(1 +
+do {});
+() =>
+do {};
 
-(do {
-  switch (0) {
-    case 0:
-      "foo";
-    case 1:
-      break;
+(
+do {
+  switch(0) {
+    case 0: "foo";
+    case 1: break;
   }
 });
 
-() => do {
+() =>
+do {
   var obj = { foo: "bar", bar: "foo" };
   for (var key in obj) {
     obj[key];
```

# Output

```js
const envSpecific = {
  domain:
    do {
      if(env === 'production') 'https://abc.mno.com/';
else
if (env === "development") "http://localhost:4000";
}
}

let x =
do {
  let tmp = f();
  tmp * tmp + 1
};

let y =
do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

function foo() {
  return (
    <nav>
      <Home />
      {
        do {
          if (loggedIn) {
            <LogoutButton />
          } else {
            <LoginButton />
          }
        }
      }
    </nav>
  );
}

(
do {});
(
do {} + 1);
(1 +
do {});
() =>
do {};

(
do {
  switch(0) {
    case 0: "foo";
    case 1: break;
  }
});

() =>
do {
  var obj = { foo: "bar", bar: "foo" };
  for (var key in obj) {
    obj[key];
  }
};
```


# Errors
```
do.js:3:5 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an expression, or an assignment but instead found 'do'
  
  × Expected an expression, or an assignment here
  
    ┌─ do.js:3:5
    │
  3 │     do {
    │     ^^
  
do.js:3:8 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `:` but instead found `{`
  
  × unexpected
  
    ┌─ do.js:3:8
    │
  3 │     do {
    │        ^
  
do.js:4:14 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `,` but instead found `===`
  
  × unexpected
  
    ┌─ do.js:4:14
    │
  4 │       if(env === 'production') 'https://abc.mno.com/';
    │              ^^^
  
do.js:4:32 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a function body but instead found ''https://abc.mno.com/''
  
  × Expected a function body here
  
    ┌─ do.js:4:32
    │
  4 │       if(env === 'production') 'https://abc.mno.com/';
    │                                ^^^^^^^^^^^^^^^^^^^^^^
  
do.js:4:54 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `:` but instead found `;`
  
  × unexpected
  
    ┌─ do.js:4:54
    │
  4 │       if(env === 'production') 'https://abc.mno.com/';
    │                                                      ^
  
do.js:5:7 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found 'else'
  
  × Expected a statement here
  
    ┌─ do.js:5:7
    │
  5 │       else if(env === 'development') 'http://localhost:4000';
    │       ^^^^
  
do.js:6:5 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '}
    }'
  
  × Expected a statement here
  
    ┌─ do.js:6:5
    │  
  6 │ ┌     }
  7 │ │ };
    │ └─^
  
do.js:9:9 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an expression, or an assignment but instead found 'do'
  
  × Expected an expression, or an assignment here
  
    ┌─ do.js:9:9
    │
  9 │ let x = do {
    │         ^^
  
do.js:12:2 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `;`
  
  × unexpected
  
     ┌─ do.js:12:2
     │
  12 │ };
     │  ^
  
do.js:14:9 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an expression, or an assignment but instead found 'do'
  
  × Expected an expression, or an assignment here
  
     ┌─ do.js:14:9
     │
  14 │ let y = do {
     │         ^^
  
do.js:18:2 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `;`
  
  × unexpected
  
     ┌─ do.js:18:2
     │
  18 │ };
     │  ^
  
do.js:25:9 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `}` but instead found `do`
  
  × unexpected
  
     ┌─ do.js:25:9
     │
  25 │         do {
     │         ^^
  
do.js:26:11 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `}` but instead found `if`
  
  × unexpected
  
     ┌─ do.js:26:11
     │
  26 │           if (loggedIn) {
     │           ^^
  
do.js:37:2 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `do`
  
  × unexpected
  
     ┌─ do.js:37:2
     │
  37 │ (do {});
     │  ^^
  
do.js:37:7 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `)`
  
  × unexpected
  
     ┌─ do.js:37:7
     │
  37 │ (do {});
     │       ^
  
do.js:38:2 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `do`
  
  × unexpected
  
     ┌─ do.js:38:2
     │
  38 │ (do {} + 1);
     │  ^^
  
do.js:38:8 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `+`
  
  × unexpected
  
     ┌─ do.js:38:8
     │
  38 │ (do {} + 1);
     │        ^
  
do.js:39:6 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an expression but instead found 'do'
  
  × Expected an expression here
  
     ┌─ do.js:39:6
     │
  39 │ (1 + do {});
     │      ^^
  
do.js:39:11 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `)`
  
  × unexpected
  
     ┌─ do.js:39:11
     │
  39 │ (1 + do {});
     │           ^
  
do.js:40:7 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a function body, or an expression but instead found 'do'
  
  × Expected a function body, or an expression here
  
     ┌─ do.js:40:7
     │
  40 │ () => do {};
     │       ^^
  
do.js:40:12 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `;`
  
  × unexpected
  
     ┌─ do.js:40:12
     │
  40 │ () => do {};
     │            ^
  
do.js:42:2 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `do`
  
  × unexpected
  
     ┌─ do.js:42:2
     │
  42 │ (do {
     │  ^^
  
do.js:47:2 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `)`
  
  × unexpected
  
     ┌─ do.js:47:2
     │
  47 │ });
     │  ^
  
do.js:49:7 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a function body, or an expression but instead found 'do'
  
  × Expected a function body, or an expression here
  
     ┌─ do.js:49:7
     │
  49 │ () => do {
     │       ^^
  
do.js:54:2 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `while` but instead found `;`
  
  × unexpected
  
     ┌─ do.js:54:2
     │
  54 │ };
     │  ^
  
do.js:31:9 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected token. Did you mean `{'}'}` or `&rbrace;`?
  
     ┌─ do.js:31:9
     │
  31 │         }
     │         ^
  
do.js:32:7 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected token. Did you mean `{'}'}` or `&rbrace;`?
  
     ┌─ do.js:32:7
     │
  32 │       }
     │       ^
  

```


